made changes based on feedback given